--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "dotenv": "^17.1.0",
     "express": "^5.1.0",
     "joi": "^17.13.3",
+    "jsonwebtoken": "^9.0.2",
     "pg": "^8.16.3",
     "uuid": "^11.1.0",
     "ws": "^8.18.3"
@@ -25,6 +26,7 @@
     "@types/bcrypt": "^5.0.2",
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.3",
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^24.0.12",
     "@types/pg": "^8.15.4",
     "nodemon": "^3.1.10",
