--- a/package.json
+++ b/package.json
@@ -5,10 +5,10 @@
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon src/index.ts",
-    "build": "tsc",
+    "dev": "nodemon --exec node --loader ts-node/esm src/index.ts",
+    "build": "npx tsc",
     "start": "node dist/index.js",
-    "start:dev": "ts-node src/index.ts"
+    "start:dev": "node --loader ts-node/esm src/index.ts"
   },
   "keywords": [],
   "author": "",
@@ -23,17 +23,18 @@
     "jsonwebtoken": "^9.0.2",
     "pg": "^8.16.3",
     "uuid": "^11.1.0",
-    "ws": "^8.18.3"
-  },
-  "devDependencies": {
-    "@types/bcrypt": "^5.0.2",
-    "@types/cors": "^2.8.19",
-    "@types/express": "^5.0.3",
-    "@types/jsonwebtoken": "^9.0.10",
+    "ws": "^8.18.3",
     "@types/node": "^24.3.0",
+    "@types/express": "^5.0.3",
+    "@types/cors": "^2.8.19",
+    "@types/bcrypt": "^5.0.2",
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/pg": "^8.15.5",
     "@types/uuid": "^10.0.0",
     "@types/ws": "^8.18.1",
+    "typescript": "^5.0.0"
+  },
+  "devDependencies": {
     "nodemon": "^3.1.10",
     "ts-node": "^10.9.2"
   }
