--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,7 @@
     "target": "ES2020",
     "module": "ESNext",
     "lib": ["ES2020"],
-    "moduleResolution": "bundler",
+    "moduleResolution": "node",
     "outDir": "./dist",
     "rootDir": "./src",
     "strict": true,
@@ -28,8 +28,7 @@
     "typeRoots": ["node_modules/@types"],
     "sourceMap": true,
     "allowJs": true,
-    "checkJs": true,
-    "types": ["node"]
+    "checkJs": true
 
     /* Emit */
     // "declaration": true,                              /* Generate .d.ts files from TypeScript and JavaScript files in your project. */
