--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon --exec node --loader ts-node/esm src/index.ts",
-    "build": "npx tsc",
+    "build": "npm install && tsc",
     "start": "node dist/index.js",
     "start:dev": "node --loader ts-node/esm src/index.ts"
   },
@@ -32,7 +32,7 @@
     "@types/pg": "^8.15.5",
     "@types/uuid": "^10.0.0",
     "@types/ws": "^8.18.1",
-    "typescript": "^5.0.0"
+    "typescript": "^5.3.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.10",
